@@ -1,3 +1,8 @@
+
+	* bearoff.c, gnubg.c: use g_path_get_dirname
+	  if dirname not available
+	* show.c: #include "gtkpath.h" added
+
 Thu Jul 10 20:19:59 2003  Holger Bochnig <hbgg@gmx.net>
 
 	* postscript.c: changed StartPage and EndPage to 
